--- a/bootrestemployee/src/main/resources/application.properties
+++ b/bootrestemployee/src/main/resources/application.properties
@@ -1,3 +1,14 @@
+# multipart configuration
+
+# enabling multipart uploads
+spring.servlet.multipart.enabled = true
+
+# maximum file size allowed
+spring.servlet.multipart.max-file-size = 200MB
+
+# minimum file size
+spring.servlet.multipart.file-size-threshold = 2KB
+
 spring.datasource.name=sprigncrud
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/springbootjpa
@@ -5,3 +16,5 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.hibernate.ddl-auto=create
+
+
